# modflow-nwt

./: .gitignore  README.md  meson.build  meson_tools.ipynb
MF_NWT/MF_NWT/: MF_NWT.vfproj
MF_NWT/MF_NWT/x64/Debug/: BuildLog.htm
MODFLOW-NWT/src/: Irestart.f90  NWT1_gmres.f90  NWT1_ilupc_mod.f90  NWT1_module.f90  NWT1_xmd.f90  NWT1_xmdlib.f90  gwf2bas7_NWT.f90  gwf2drn7_NWT.f90  gwf2ets7.f90  gwf2fhb7.f90  gwf2gag7.f90  gwf2ghb7_NWT.f90  gwf2hfb7_NWT.f90  gwf2huf7.f90  gwf2lak7_NWT.f90  gwf2mnw27_NWT.f90  gwf2riv7_NWT.f90  gwf2str7.f90  gwf2sub7_NWT.f90  gwf2swi27.F90  gwf2swt7.f90  gwf2upw1.f90  gwf2uzf1_NWT.f90  gwf2wel7_NWT.f90  hufutl7.f90  mach_mod.f90  modules.f90  nogmg.f90  obs2chd7.f90  obs2str7.f90  openspec.F90  utl7.f90
msvc/MF_NWT/: MF_NWT.vfproj
src/: mf_Irestart.f90  mf_MF_NWT.f90  mf_NWT1_solver.f90  mf_de47_NWT.f90  mf_gwf2ag1_NWT_mf.f90  mf_gwf2bcf7.f90  mf_gwf2chd7.f90  mf_gwf2drt7.f90  mf_gwf2evt7.f90  mf_gwf2hydmod7.f90  mf_gwf2ibs7.f90  mf_gwf2lpf7.f90  mf_gwf2mnw17_NWT.f90  mf_gwf2mnw27_NWT.f90  mf_gwf2mnw2i7.f90  mf_gwf2rch7.f90  mf_gwf2res7.f90  mf_gwf2sfr7_NWT.f90  mf_gwf2swi27.F90  mf_gwf2swr7.f90  mf_gwf2swr7util.f90  mf_gwflakmodule_NWT.f90  mf_gwfsfrmodule_NWT.f90  mf_gwfuzfmodule_NWT.f90  mf_lmt8_NWT.f90  mf_mhc7.f90  mf_obs2bas7.f90  mf_obs2chd7.f90  mf_obs2drn7.f90  mf_obs2ghb7.f90  mf_obs2riv7.f90  mf_openspec.F90  mf_parutl7.f90  mf_pcg7_NWT.f90  mf_sip7_NWT.f90  openspec.inc
